--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Vaibhav">
+    <img src="Images/vaibhavLogo.png" alt="Vaibhav">
     <p>Vaibhav</p>
   </a>
   <p class="device-notification--message">Vaibhav has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
@@ -27,10 +27,10 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Vaibhav">
+            <img src="Images/vaibhavLogo.png" alt="Vaibhav" height="70" width="50">
             <p>Vaibhav 3.0</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Reach Out</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -41,7 +41,7 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Reach Out</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -49,7 +49,7 @@
             <div class="intro">
               <div class="intro--banner">
                 <h1>Universal<br>Engineering<br>college</h1>
-                <button class="cta">Hire Us
+                <button class="cta">Reach Out
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -268,7 +268,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Reach Out</li>
   </ul>
 </div>
 
@@ -276,8 +276,4 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="js/functions-min.js"></script>
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> d7db6742840aa6d5feffcde392431056547ef346
