--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="Images/vaibhavLogo.png" alt="Vaibhav" height="70" width="50">
             <p>Vaibhav 3.0</p>
           </a>
-          <button class="header--cta cta">Reach Out</button>
+          <button class="header--cta cta">Contact Us</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -41,7 +41,6 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Reach Out</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -49,7 +48,7 @@
             <div class="intro">
               <div class="intro--banner">
                 <h1>Universal<br>Engineering<br>college</h1>
-                <button class="cta">Reach Out
+                <button class="cta">Contact Us
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -77,7 +76,7 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Technical Events</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
@@ -131,7 +130,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>Join Us<br>and<br>enjoy<br>our events</h2>
                 <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -145,13 +144,13 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Laser Tag</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>MotorShow</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Paintball</h3>
                 </a>
               </div>
             </div>
@@ -268,7 +267,6 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Reach Out</li>
   </ul>
 </div>
 
