--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="delay_time; URL= ../public/index.html" />
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Old Page</title>
+     <meta charset="UTF-8" />
+     <meta http-equiv="refresh" content="1; URL= ../public/index.html" />
+   </head>
+   <body>
+     <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://www.hubspot.com/">here</a> to go to the HubSpot homepage.</p>
+   </body>
+</html>
