--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="Images/vaibhavLogo.png" alt="Vaibhav" height="70" width="50">
             <p>Vaibhav 3.0</p>
           </a>
-          <button class="header--cta cta">Contact us Us</button>
+          <button class="header--cta cta">Contact Us</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
